# BombFX

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
Presets/: Ambient Space.xml  Cathedral.xml  Dream Machine.xml  Dub Echo.xml  Infinite Void.xml  Lush Chorus.xml  Ping Pong Madness.xml  Psychedelic.xml  README.md  Slapback.xml  Small Room.xml  Studio Thickener.xml  Subtle Shimmer.xml  Tight & Punchy.xml  Vocal Plate.xml
Presets/Chorus/: Lush Chorus.preset  Studio Thickener.preset  Subtle Shimmer.preset  Wide Stereo.preset
Presets/Combo/: Ambient Space.preset  Dream Machine.preset  Infinite Void.preset
Presets/Delay/: Dotted Eighth.preset  Dub Echo.preset  Ping Pong.preset  Slapback.preset
Presets/Reverb/: Cathedral.preset  Huge Hall.preset  Small Room.preset  Vocal Plate.preset
Source/: BombFXLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/FX/: ChorusProcessor.cpp  ChorusProcessor.h  DelayProcessor.cpp  DelayProcessor.h  FilterProcessor.cpp  FilterProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h
